Fixed the issue with the nested form where when submitting the form the page threw a cannot mass assign attribute:menu_items_attributes. Fixed this by adding the menu_items_attributes to the restraurant model

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Event image:</b>
+  <%= image_tag @event.event_image_url(:thumb).to_s %>
+</p>
+<p>
+  <b>Event image Original:</b>
+  <%= image_tag @event.event_image_url.to_s %>
+</p>
+
+<p>
   <b>Event name:</b>
   <%= @event.event_name %>
 </p>
