--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@event) do |f| %>
+<%= form_for(@event, :html => {:multipart => true}) do |f| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
@@ -30,6 +30,10 @@
   <div class="field">
     <%= f.label :restaurant_id %><br />
     <%= f.number_field :restaurant_id %>
+  </div>
+  <div class="field">
+    <%= f.label :event_image %><br />
+    <%= f.file_field :event_image %>  
   </div>
   <div class="actions">
     <%= f.submit %>
