--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -21,10 +21,10 @@
 </p>
 
 <h1>Restaurant Menu</h1>
-<% for menu_item in restaurant.menu_items %>
+<% for menu_item in @restaurant.menu_items %>
 	<div>
 		<%= menu_item.name %>
-		<%= menu_item.type %>
+		<%= menu_item.course_name %>
 	</div>
 <% end %>
 
