--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,13 @@
 <div class="container">
   <div class="row-fluid">
+    <div class="span12">
+      <p id="notice"><%= notice %></p>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row-fluid">
     <div class="span6">
       <div class="eventDetailsImage">
         <%= image_tag @event.event_image_url.to_s %>
@@ -21,54 +29,46 @@
 
 <div class="container">
   <div class="row-fluid">
-    <div class="span3">
+    <div class="span8">
+      <% course_count = 1 %>
+
       <% @menu_items_categorized.each do |course_name, menu_items| %>
-  
+        
+        <%# Todo: Clean up this if loop. Right now the if loop is used to correctly put the tags for the span classes %>
+        <% if course_count == 0 || course_count == 2 %>
+          <div class="row-fluid">
+            <div class="span6">
+        <% else %>
+          <div class="span6">
+        <% end %>
+
         <h3><%= course_name %></h3>
         <% for menu_item in menu_items%>
           <div><%= menu_item.name %></div>
         <% end %>
+
+        <% if course_count == 0 || course_count == 2 %>
+            </div>
+          </div>
+          <% course_count = course_count + 1 %>
+        <% else %>
+          </div>  
+          <% course_count = course_count + 1 %>
+        <% end %>
+
       <% end %>
+
+
+    </div>
+    <div class="span4">
+      Hello
     </div>
   </div>
 </div>
 
 
-<p id="notice"><%= notice %></p>
 
-<p>
-  <b>Event image:</b>
-  <%= image_tag @event.event_image_url(:thumb).to_s %>
-</p>
-<p>
-  <b>Event image Original:</b>
-  <%= image_tag @event.event_image_url.to_s %>
-</p>
 
-<p>
-  <b>Event name:</b>
-  <%= @event.event_name %>
-</p>
-
-<p>
-  <b>Event description:</b>
-  <%= @event.event_description %>
-</p>
-
-<p>
-  <b>Event date:</b>
-  <%= @event.event_date %>
-</p>
-
-<p>
-  <b>Event time:</b>
-  <%= @event.event_time %>
-</p>
-
-<p>
-  <b>Restaurant:</b>
-  <%= @event.restaurant_id %>
-</p>
 
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
