--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New restaurant</h1>
+<div class="container">
+	<div class="row-fluid">
+		<div class="span12">
+			<h1>New restaurant</h1>
 
-<%= render 'form' %>
+			<%= render 'form' %>
 
-<%= link_to 'Back', restaurants_path %>
+			<%= link_to 'Back', restaurants_path %>
+			
+		</div>
+	</div>
+</div>
+
