--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -8,35 +8,92 @@
         <li><%= msg %></li>
       <% end %>
       </ul>
-    </div>
+    </div>  
   <% end %>
+  <div class="tab-content">
+    <div class="tab-pane" id="tab1">
+      <div class="field">
+        <%= f.label :event_name %>
+        <%= f.text_field :event_name %>
+      </div>
+      <div class="field">
+        <%= f.label :event_description %>
+        <%= f.text_area :event_description, :rows => 5 %>
+      </div>
+      <div class="field">
+        <%= f.label :event_date %>
+        <%#f.date_select :event_date %>
+        <div class="input-append date" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
+          <%= f.text_field :event_date %>
+          <span class="add-on"><i class="icon-calendar"></i></span>
+          <!--<input size="16" type="text" value="12-02-2012" readonly>-->
+          
+        </div>
 
-  <div class="field">
-    <%= f.label :event_name %>
-    <%= f.text_field :event_name %>
-  </div>
-  <div class="field">
-    <%= f.label :event_description %>
-    <%= f.text_area :event_description %>
-  </div>
-  <div class="field">
-    <%= f.label :event_date %>
-    <%= f.date_select :event_date %>
-  </div>
-  <div class="field">
-    <%= f.label :event_time %>
-    <%= f.time_select :event_time %>
-  </div>
-  <div class="field">
-    <%= f.label :restaurant_id %>
-    <%= f.select :restaurant_id, Restaurant.all.collect {|x| [x.name, x.id]}, {}%>   
-     
-  </div>
-  <div class="field">
-    <%= f.label :event_image %>
-    <%= f.file_field :event_image %>  
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+      </div>
+      <div class="field">
+        <%= f.label :event_time %>
+        <div class="input-append bootstrap-timepicker">
+          <%= f.text_field :event_time, 'data-minute-step' => "30" %>
+          <span class="add-on"><i class="icon-time"></i></span>
+        </div>
+      </div>
+      <div class="field">
+        <%= f.label :event_image %>
+        <%= f.file_field :event_image %>  
+      </div>
+    </div>
+    
+    <div class="tab-pane" id="tab2">
+      <div class="field">
+        <%= f.label :restaurant_id %>
+        <%= f.select :restaurant_id, Restaurant.all.collect {|x| [x.name, x.id]}, {}%>        
+        <div class="row-fluid">
+          <div class="span6">
+            test
+          </div>
+          <div class="span6">
+            hello
+          </div>
+        </div>
+        <% @restaurants.each do |restaurant| %>
+        
+            
+          
+        <% end %>
+          
+        
+      </div>
+    </div>
+    
+    <div class="tab-pane" id="tab3">
+      <div class="field">
+        <%= f.label :invitees %>
+        <p>
+          Enter the email address for all the people you want to invite. Seperate each email id by a comma. We will send them an invite
+        </p>
+        <%= f.text_area :invitees, :rows => 5 %>
+      </div>
+      <div class="field">
+        <div class="actions">
+          <%= f.submit :class => "large awesome green" %>
+        </div>
+      </div>
+      
+    </div>
+
+    <ul class="pager wizard">
+      <li class="previous first" style="display:none;"><a href="#">First</a></li>
+      <li class="previous"><a href="#">Previous</a></li>
+      <li class="next last" style="display:none;"><a href="#">Last</a></li>
+      <li class="next"><a href="#">Next</a></li>
+    </ul>
+  <div>
+<% end %>  
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('#dp3').datepicker();
+    $('#event_event_time').timepicker();
+  });
+</script>
