--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@restaurant) do |f| %>
+<%= form_for(@restaurant, :html => {:multipart => true}) do |f| %>
   <% if @restaurant.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :photo %>
-    <%= f.text_field :photo %>
+    <%= f.file_field :photo %>
   </div>
   <%= f.fields_for :menu_items do |builder|%>
     <div class="field">
