--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,30 @@
 <div class="container">
 	<div class="row-fluid">
-		<div class="span6 offset4">
-			<h2>Sign up</h2>
+		<div class="span6 offset3">
+			<div class="login">
+				<h2>Sign up</h2>
 
-			<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-			  <%= devise_error_messages! %>
+				<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+				  <%= devise_error_messages! %>
 
-			  <div><%= f.label :name %><br />
-			  <%= f.text_field :name, :autofocus => true %></div>
+				  <div><%= f.label :name %>
+				  <%= f.text_field :name, :autofocus => true %></div>
 
-			  <div><%= f.label :email %><br />
-			  <%= f.email_field :email %></div>
+				  <div><%= f.label :email %>
+				  <%= f.email_field :email %></div>
 
-			  <div><%= f.label :password %><br />
-			  <%= f.password_field :password %></div>
+				  <div><%= f.label :password %>
+				  <%= f.password_field :password %></div>
 
-			  <div><%= f.label :password_confirmation %><br />
-			  <%= f.password_field :password_confirmation %></div>
+				  <div><%= f.label :password_confirmation %>
+				  <%= f.password_field :password_confirmation %></div>
 
-			  <div><%= f.submit "Sign up" %></div>
-			<% end %>
+				  <div><%= f.submit "Sign up", :class => "large awesome green" %></div>
+				<% end %>
 
-			<%= render "devise/shared/links" %>
+				<%= render "devise/shared/links" %>
+			</div>
+			
 
 		</div>
 	</div>
