Added a create event button in layouts/application. Precompiled assets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,9 @@
 				<div class="span6 offset4">
 					<%= render_navigation :class => 'test' %>
 				</div>
+				<div class="span2">
+					<%= link_to "Create Event", :new_event, :class => "large green awesome createEventBtn" %>
+				</div>
 			</div>			
 		</div>
 	</div>
